# Durable-Engine

./: .gitignore  Dockerfile  Future_Implementation.md  Makefile  Project_info.md  README.md  docker-compose.yml  learning_points.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  docker.yaml  live.yaml  production.yaml  schema.json  source-kafka.yaml  source-postgres-cdc.yaml  source-webhook.yaml  source-websocket.yaml
helm/durable-engine/: Chart.yaml  values-production-blue.yaml  values-production-green.yaml  values-production-standby.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/durable-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/durable-engine/templates/tests/: test-connection.yaml
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
k8s/blue-green/: README.md  stable-ingress.yaml  stable-service.yaml
k8s/overlays/production/: configmap-patch.yaml  deployment-patch.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  pvc-dlq-patch.yaml  pvc-output-patch.yaml
k8s/overlays/staging/: configmap-patch.yaml  deployment-patch.yaml  hpa.yaml  kustomization.yaml
output/: checkpoint.json
proto/: record.proto
samples/: sample.csv  sample.fixed_width.txt  sample.jsonl
src/durable_engine/: __init__.py  __main__.py  app.py
src/durable_engine/config/: loader.py  models.py  schema.py
src/durable_engine/ingestion/: base.py  csv_reader.py  fixed_width.py  jsonl_reader.py  kafka_source.py  postgres_cdc_source.py  reader_factory.py  record.py  validator.py  webhook_source.py  websocket_source.py
src/durable_engine/observability/: health.py  metrics.py  prometheus_server.py  reporter.py  structured_log.py
src/durable_engine/orchestrator/: dispatcher.py  engine.py  pipeline.py
src/durable_engine/resilience/: backpressure.py  checkpoint.py  circuit_breaker.py  dlq.py  dlq_replay.py  rate_limiter.py  retry.py
src/durable_engine/sinks/: base.py  grpc_sink.py  mq_sink.py  rest_sink.py  sink_factory.py  widecolumn_sink.py
src/durable_engine/transformation/: avro_transformer.py  base.py  json_transformer.py  protobuf_transformer.py  transformer_registry.py  xml_transformer.py
src/durable_engine/utils/: async_helpers.py  file_utils.py
tests/: conftest.py
tests/integration/: test_backpressure.py  test_orchestrator.py  test_pipeline.py
tests/performance/: test_memory.py  test_throughput.py
tests/unit/: test_app_standby.py  test_avro_transformer.py  test_circuit_breaker.py  test_csv_reader.py  test_dlq.py  test_fixed_width_reader.py  test_json_transformer.py  test_jsonl_reader.py  test_protobuf_transformer.py  test_rate_limiter.py  test_retry.py  test_xml_transformer.py
