[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "durable-engine"
version = "1.0.0"
description = "High-Throughput Distributed Data Fan-Out & Transformation Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aditya" },
]

dependencies = [
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.0,<25.0",
    "fastavro>=1.9,<2.0",
    "protobuf>=5.0,<6.0",
    "grpcio-tools>=1.60,<2.0",
    "lxml>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "click>=8.1,<9.0",
    "prometheus-client>=0.20,<1.0",
    "aiohttp>=3.9,<4.0",
    "aiofiles>=23.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.12,<4.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.6,<4.0",
]

[project.scripts]
durable-engine = "durable_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/durable_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=durable_engine --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
